Fixed the image gallery alignment bug.

--- a/app/assets/stylesheets/components/shared/image-gallery.sass
+++ b/app/assets/stylesheets/components/shared/image-gallery.sass
@@ -170,6 +170,7 @@
   .justified-gallery
     position: relative
     margin: -15px
+    width: auto
 
     a.gallery-image
       display: inline-block
